--- a/loginlogout/templates/loginlogout/login_form.html
+++ b/loginlogout/templates/loginlogout/login_form.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<form action="{% url 'login' %}" method="post" role="form">{% csrf_token %}
+<form action="{% url 'loginlogout:login' %}" method="post" role="form">{% csrf_token %}
   {% if next %}
     <input type="hidden" name="next" value="{{ next }}" />
   {% endif %}
