--- a/loginlogout/templates/loginlogout/login_menu.html
+++ b/loginlogout/templates/loginlogout/login_menu.html
@@ -4,7 +4,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a id="btn-logged" class="dropdown-toggle" href="#" data-toggle="dropdown">
-          <span class="glyphicon glyphicon-user"></span> {{ request.user.username }} <strong class="caret"></strong>
+          <span class="glyphicon glyphicon-user"></span> {{ request.user.email }} <strong class="caret"></strong>
         </a>
         <ul class="dropdown-menu">
           <li><a href="{% url 'loginlogout:logout' %}">{% trans 'Logout' %}</a></li>
